# Projects

./: Corner_Detection.ipynb  Sentiment_Analysis.ipynb
Emails_SpamFiltering/: Build_Vocab.py  GenerateData.py  SpamFiltering.py
Face_Analytic/RetinaNet/: FaceAnalytics.ipynb  coco_validation.py  csv_validation.py  train.py
Face_Analytic/RetinaNet/retinanet/: MODEL.py  anchors.py  dataloader.py  losses.py  models.py  models_Pyramids.py
Face_Analytic/YOLO/: FaceAnalytics.ipynb
Face_Recog/: enroll_newperson.py  extract_face.py  infer.py  loss_funcs.py  models.py  requirements.txt  train.py
Face_Recog/deploy/: CMakeLists.txt  cvt_script.py  embed_time.cpp
Grape_Instance_Segmentation/: grape.ipynb
Grape_Instance_Segmentation/detectron2/tools/deploy/: CMakeLists.txt  config.yaml  ex_model.py  export_model.py  grape_infer.py  torchscript_mask_rcnn.cpp  trace_model.ts
